--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body  background="img/pexels-1.jpg" style=" font-family:Engravers MT;
+background-size: cover;
+color: #0c1628;
+display:flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+margin: 0;">
     <div class="container">
         <h1>Weather App</h1>
         <div class="search-container">
